Add screenshots to label filtering

--- a/docs/dashboard/interact-charts.mdx
+++ b/docs/dashboard/interact-charts.mdx
@@ -128,9 +128,14 @@ The chart label filtering is currently enabled on:
 - All charts on the **Overview** tab
 - Custom dashboards
 
+![Chart filtering on Overview tab chart](https://user-images.githubusercontent.com/88642300/193084084-01074495-c826-4519-a09f-d210f7e3e6be.png)
+![Chart filtering on Custom dashboard](https://user-images.githubusercontent.com/88642300/193084172-358dfded-c318-4d9f-b6e2-46a8fc33030b.png)
+
 The top panel on each chart displays the various filters and grouping options selected on the specific chart. These filters are specific for each chart and need to be manually configured on each chart.
 
 Additionally, the charts can be saved to a custom dashboard, new or existing, with the selected filters from the overview screen.
+
+![Chart filtering saved on custom dashboard](https://user-images.githubusercontent.com/88642300/193084225-1b65984e-566c-4815-8bc1-a2781d3564bd.png)
 
 ## Custom labels for Collectors
 
@@ -162,6 +167,8 @@ jobs:
     labels:
         instance_type: production
  ```
+ ![Group by individual job labels one](https://user-images.githubusercontent.com/88642300/193084580-49df500a-ddfb-45bb-a209-3c7a904ee9e0.png)
+ ![group by individual job labels two](https://user-images.githubusercontent.com/88642300/193084624-6d9848d0-9400-4e34-9cd4-78e50c784cc0.png)
 
 ### Future Work
 
