--- a/docs/dashboard/interact-charts.mdx
+++ b/docs/dashboard/interact-charts.mdx
@@ -172,7 +172,7 @@ jobs:
 
 ### Future Work
 
-We already have [configurable host labels](https://learn.netdata.cloud/guides/using-host-labels) as well, which currently can’t be used to filter or group your metrics. We intend to provide the same custom chart label capabilities with host labels as well. 
+We already have [configurable host labels](https://learn.netdata.cloud/guides/using-host-labels) as well, which currently can’t be used to filter or group your metrics. We intend to provide the same capabilities described here with host labels, among other capabilities on other areas of the app as well
 
 ## What's next?
 
