--- a/collectors/statsd.plugin/k6.md
+++ b/collectors/statsd.plugin/k6.md
@@ -4,7 +4,7 @@ custom_edit_url: "https://github.com/netdata/netdata/edit/master/collectors/stat
 sidebar_label: "K6 Load Testing"
 learn_status: "Published"
 learn_topic_type: "References"
-learn_rel_path: "APM/StatsD"
+learn_rel_path: "Collectors References/APM/StatsD"
 -->
 
 # K6 Load Testing monitoring with Netdata
