Map with metadata the old docs to the new structure
Signed-off-by: Tasos Katsoulas <tasos@netdata.cloud>

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -1,9 +1,12 @@
 ---
 title: "Get started with Netdata"
 description: "Download and install the open-source Netdata monitoring agent on physical/virtual servers, Linux (Ubuntu/Debian/CentOS/etc), Docker, Kubernetes, and many others, often with one command."
-type: how-to
+type: "how-to"
 sidebar_label: "Get started"
-custom_edit_url: https://github.com/netdata/netdata/edit/master/docs/get-started.mdx
+custom_edit_url: "https://github.com/netdata/netdata/edit/master/docs/get-started.mdx"
+learn_status: "Published"
+learn_topic_type: "Tasks"
+learn_rel_path: "slugs"
 ---
 
 import { OneLineInstallWget } from '@site/src/components/OneLineInstall/'
