--- a/docs/dashboard/customize.mdx
+++ b/docs/dashboard/customize.mdx
@@ -6,7 +6,7 @@ custom_edit_url: "https://github.com/netdata/netdata/edit/master/docs/dashboard/
 sidebar_label: "Customize the standard dashboard"
 learn_status: "Published"
 learn_topic_type: "Tasks"
-learn_rel_path: "Task"
+learn_rel_path: "Operations"
 ---
 
 # Customize the standard dashboard
