links should not break in two lines

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -106,14 +106,13 @@ to [interact with charts](https://github.com/netdata/netdata/blob/master/docs/da
 ### Configuration
 
 Discover the recommended way to [configure Netdata's settings or behavior](https://github.com/netdata/netdata/blob/master/docs/configure/nodes.md) using our built-in
-`edit-config` script, then apply that knowledge to mission-critical tweaks, such as [changing how long Netdata stores
-metrics](https://github.com/netdata/netdata/blob/master/docs/store/change-metrics-storage.md).
+`edit-config` script, then apply that knowledge to mission-critical tweaks, such as [changing how long Netdata stores metrics](https://github.com/netdata/netdata/blob/master/docs/store/change-metrics-storage.md).
 
 ### Data collection
 
 If Netdata didn't autodetect all the hardware, containers, services, or applications running on your node, you should
-learn more about [how data collectors work](https://github.com/netdata/netdata/blob/master/docs/collect/how-collectors-work.md). If there's a [supported
-collector](https://github.com/netdata/netdata/blob/master/collectors/COLLECTORS.md) for metrics you need, [configure the collector](https://github.com/netdata/netdata/blob/master/docs/collect/enable-configure.md)
+learn more about [how data collectors work](https://github.com/netdata/netdata/blob/master/docs/collect/how-collectors-work.md). 
+If there's a [supported collector](https://github.com/netdata/netdata/blob/master/collectors/COLLECTORS.md) for metrics you need, [configure the collector](https://github.com/netdata/netdata/blob/master/docs/collect/enable-configure.md)
 or read about its requirements to configure your endpoint to publish metrics in the correct format and endpoint.
 
 ### Alarms & notifications
@@ -124,8 +123,7 @@ community, but you may want to [edit alarms](https://github.com/netdata/netdata/
 
 ### Need to monitor multiple nodes in one place?
 
-For robust multi-node monitoring from a single interface, consider [Netdata
-Cloud](https://app.netdata.cloud/), which streams, aggregates, and visualizes metrics from any number of
+For robust multi-node monitoring from a single interface, consider [Netdata Cloud](https://app.netdata.cloud/), which streams, aggregates, and visualizes metrics from any number of
 nodes. It's all the same out-of-the-box, zero-configuration functionality of the open-source monitoring agent, but for
 any number of distributed nodes, _entirely for free_.
 
