changed status to see pages and tried to fix links

--- a/docs/cloud/alerts-notifications/notifications.mdx
+++ b/docs/cloud/alerts-notifications/notifications.mdx
@@ -16,10 +16,10 @@ you or your team.
 
 Having this information centralized helps you:
 * Have a clear view of the health across your infrastructure, [seeing all a alerts in one place](/docs/nightly/operations/view-active-health-alarms)
-* Easily [setup your alert notification process](/docs/nightly/metric-correlations.md): 
+* Easily [setup your alert notification process](/docs/nightly/metric-correlations): 
 methods to use and where to use them, filtering rules, etc.
 * Quickly troubleshoot using [Metric Correlations](https://learn.netdata.cloud/docs/nightly/concepts/guided-troubleshooting/metric-correlations) 
-or [Anomaly Advisor](/docs/cloud/insights/anomaly-advisor.mdx)
+or [Anomaly Advisor](/docs/cloud/insights/anomaly-advisor)
 
 If a node is getting disconnected often or has many alerts, we protect you and your team from alert fatigue by sending
 you a flood protection notification. Getting one of these notifications is a good signal of health or performance issues
@@ -147,8 +147,8 @@ visualization of the health of your infrastructure.
 
 #### Related Tasks
 - [View Active health alarms](/docs/nightly/operations/view-active-health-alarms)
-- [Manage notification methods](/docs/cloud/alerts-notifications/manage-notification-methods.md)
-- [Add webhook notification configuration](/docs/cloud/alerts-notifications/add-webhook-notification-configuration.md)
-- [Add discord notification configuration](/docs/cloud/alerts-notifications/add-discord-notification-configuration.md)
-- [Add slack notification configuration](/docs/cloud/alerts-notifications/add-slack-notification-configuration.md)
-- [Add pagerduty notification configuration](/docs/cloud/alerts-notifications/add-pagerduty-notification-configuration.md)
+- [Manage notification methods](/docs/cloud/alerts-notifications/manage-notification-methods)
+- [Add webhook notification configuration](/docs/cloud/alerts-notifications/add-webhook-notification-configuration)
+- [Add discord notification configuration](/docs/cloud/alerts-notifications/add-discord-notification-configuration)
+- [Add slack notification configuration](/docs/cloud/alerts-notifications/add-slack-notification-configuration)
+- [Add pagerduty notification configuration](/docs/cloud/alerts-notifications/add-pagerduty-notification-configuration)
