--- a/docs/cloud/alerts-notifications/notifications.mdx
+++ b/docs/cloud/alerts-notifications/notifications.mdx
@@ -5,7 +5,7 @@ custom_edit_url: "https://github.com/netdata/netdata/blob/master/docs/cloud/aler
 sidebar_label: "Alert notifications"
 learn_status: "Published"
 learn_topic_type: "Tasks"
-learn_rel_path: "Operations"
+learn_rel_path: "Operations/Alerts"
 ---
 
 import Callout from '@site/src/components/Callout'
@@ -53,7 +53,7 @@ Notification methods are classified on two main attributes:
 * Service level: Personal or System
 * Service classification: Community or Business
 
-Only Administrators are able to manage the space's alert notification settings.
+Only administrators are able to manage the space's alert notification settings.
 All users in a Space can personalize their notifications settings, for Personal service level notification methods, from within their profile menu.
 
 > ⚠️ Netdata Cloud supports different notification methods and their availability will depend on the plan you are at.
@@ -63,7 +63,7 @@ All users in a Space can personalize their notifications settings, for Personal 
 
 ##### Personal
 
-The notifications methods classified as **Personal** are what we consider generic, meaning that these can't have specific rules for them set by the Administrators.
+The notifications methods classified as **Personal** are what we consider generic, meaning that these can't have specific rules for them set by the administrators.
 
 These notifications are sent to the destination of the channel which is a user-specific attribute, e.g. user's e-mail, and the users are the ones that will then be able to
 manage what specific configurations they want for the Space / Room(s) and the desired Notification level, they can achieve this from their User Profile page under 
@@ -75,7 +75,7 @@ One example of such a notification method is the E-mail.
 
 For **System** notification methods, the destination of the channel will be a target that usually isn't specific to a single user, e.g. slack channel.
 
-These notification methods allow for fine-grain rule settings to be done by Administrators and more than one configuration can exist for them since. You can specify 
+These notification methods allow for fine-grain rule settings to be done by administrators and more than one configuration can exist for them since. You can specify 
 different targets depending on Rooms or Notification level settings.
 
 Some examples of such notification methods are: Webhook, PagerDuty, slack.
