Apply suggestions from code review
Co-authored-by: Chris Akritidis <43294513+cakrit@users.noreply.github.com>

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -25,11 +25,13 @@ Docker), and many other operating systems (FreeBSD, macOS), with no `sudo` requi
 
 To install Netdata in minutes on your platform:
 
-1. Visit https://app.netdata.cloud/
-2. You will be presented with an empty space, and a prompt with the install command for each platform
+1. Sign up to https://app.netdata.cloud/
+2. You will be presented with an empty space, and a prompt to "Connect Nodes" with the install command for each platform
 3. Select the platform you want to install Netdata to, copy and paste the script into your node's terminal, and run it
 
 Upon installation completing successfully, you should be able to see the node live in your Netdata Space!
+
+Continue reading for more advanced instructions and installation options.
 
 ## Install on Linux with one-line installer 
 
