Add anonymous statistics info

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -193,6 +193,13 @@ the community helps fix any bugs that might have been introduced in previous rel
     installation
 -   Retain more control over the Netdata version you use
 
+### Anonymous statistics
+
+Starting with v1.30, Netdata collects anonymous usage information by default and sends it to a self-hosted PostHog instance within the Netdata infrastructure. Read about the information collected, and learn how to-opt, on our [anonymous statistics](https://github.com/netdata/netdata/blob/master/docs/anonymous-statistics.md) page.
+
+The usage statistics are _vital_ for us, as we use them to discover bugs and prioritize new features. We thank you for
+_actively_ contributing to Netdata's future.
+
 ### Troubleshooting and known issues
 
 We are tracking a few issues related to installation and packaging.
